# coap-client-server

./: .clang-format  CMakeLists.txt
client/: CMakeLists.txt  prj.conf
client/src/: coap_client.c  coap_client.h  main.c  print_service.c  print_service.h  server_proxy.c  server_proxy.h
server/: CMakeLists.txt  prj.conf  sections-ram.ld
server/src/: coap_event_handler.c  coap_event_handler.h  main.c
